--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
     "dev": "nodemon ./bin/www",
     "debug": "nodemon  --inspect ./bin/www",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000",
-    "initDB": "node model/db.init.js"
+    "db:create": "node model/db.init.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "http-errors": "~1.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
